2008-11-28  Diego Escalante Urrelo  <diegoe@gnome.org>

	* libmuine/player-gst.c:
	Remove gnome-vfs usage. Note that player-xine still uses it.
	Closes bgo #562365.

2008-11-18  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:
	* libmuine/Makefile.am:
	* libmuine/gsequence.c:
	* libmuine/gsequence.h:
	* libmuine/pointer-list-model.c (pointer_list_model_insert):
	* libmuine/pointer-list-model.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Update to the new gsequence API, closes bgo #464825. 
	Also bump glib to 2.14. Patch from Scott Robinson with
	changes by Wouter Bolsterlee and Jorn Baayen.

2008-11-10  Priit Laes <plaes@svn.gnome.org>

	Bug 560115 – [PATCH] Use Gnome.Vfs#

	* TODO:
	* src/FileUtils.cs:
	* src/CoverImage.cs:
	* src/FileSelector.cs:
	* src/AddSongWindow.cs:
	* src/PlaylistWindow.cs:
	* src/AddAlbumWindow.cs:

	Drop P/Invoked gnome-vfs functions. Use Gnome.Vfs# API directly.


2008-11-10  Priit Laes <plaes@svn.gnome.org>

	Bug 474090 – Switch to taglib-sharp

	* src/Metadata.cs: Add cover reading for Apple MPEG4 files.


2008-11-10  Luis Medinas  <lmedinas@gnome.org>

	* TODO:
	* configure.in:
	* libmuine/Makefile.am:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:

	Ditch ColorCellRendererPixbuf and CellRendererText.
	Closes bgo #387152.

2008-11-09  Luis Medinas  <lmedinas@gnome.org>

        * data/glade/AddWindow.glade:
        * src/AddWindow.cs:

        Fix for bgo #560077 non-working buttons on Add Song/Album windows.
        Patch from Priit Laes <amd@store20.com>.

2008-11-07  Priit Laes <plaes@svn.gnome.org>

	Bug 559631 – [PATCH] Drop glade implementation for error dialogs.

	* TODO:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/ErrorDialog.cs:
	* src/OverwriteDialog.cs:
	* data/glade/Makefile.am:
	R data/glade/ErrorDialog.glade:
	R data/glade/OverwriteDialog.glade:

	Use GtkMessageDialog instead of glade-based dialogs.

2008-11-07  Priit Laes <plaes@svn.gnome.org>

	Bug 474090 – Switch to taglib-sharp

	* TODO:
	* README: