@@ -52,8 +52,7 @@ PKG_PROG_PKG_CONFIG
 PKG_CHECK_MODULES(MUINE,
 		  gconf-2.0 \
 		  gdk-pixbuf-2.0 \
-		  gnome-vfs-2.0 \
-                  glib-2.0 >= $GLIB_REQUIRED \
+		  glib-2.0 >= $GLIB_REQUIRED \
 		  gtk+-2.0 >= $GTK_REQUIRED \
 		  gnome-icon-theme >= $ICON_THEME_REQUIRED \
 		  $audio_pkgconfig)
